Wording tweaks to CV, added Referees section

--- a/src/resume_Aug2020.tex
+++ b/src/resume_Aug2020.tex
@@ -69,17 +69,17 @@ Singapore 199597}
 %\section{\sc Objective}
 %To be actively involved in the research and development of speech- and speaker-based technologies, in particular their practical applications across a wide range of engineering operations. Longer-term plans are to advance into an academic position with responsibility for continuing the advanced research efforts of an institution in this field
 
-\section{\sc Skill summary}
+\section{\sc Skill highlights}
 \begin{list2}
-\item Problem solving: find the right tool to solve the problem
-\item Communication: simplify complexity, and make it actionable
+\item Problem solving: find the right tool and approach to solve the problem
+\item Communication: simplify complexity, make it actionable
 \item Enablement: insights are only part of the consulting framework
 \item Team management: build a community
 \end{list2}
 
-\section{\sc Data science summary}
+\section{\sc Data science skill summary}
 \begin{list2}
-\item Discrete-event simulation (DES): 8yrs experience delivering DES for capital and operational decisions
+\item Discrete-event simulation (DES): 8yrs experience delivering DES for capital and operational decisions, primarily in mining \& minerals
 \item Mathematical optimization: three projects using mixed integer programming in industrial goods
 \item Machine learning (ML): one project delivered using ML pipelines for arrival prediction of bulk carriers
 \end{list2}
@@ -93,7 +93,7 @@ Singapore 199597}
 \begin{list2}
 \item Gamma SEA lead for Industrial Goods and Augmented Analytics topics
 \item Discrete-event simulation of beneficiation plant: identified co-commitments to deliver volume targets for a \$70m investment 
-\item Machine learning prediction of iron ore vessel arrival time: 5-15\% precision increase over existing model
+\item Machine learning prediction of bulk carrier arrival time at load port: 5-15\% precision increase over existing model
 \item Medium-term market price discovery for commodity market using mixed integer programming: potential \$90m profit increase
 \item Integrated sales and operations planning optimization for pulp and paper mills, palm oil refineries: identified up to 10\% margin improvement 
 \end{list2}
@@ -107,7 +107,7 @@ Singapore 199597}
 %\item The responsibilities of this position include:
 \begin{list2}
 \item Simulation consulting projects regional team lead
-\item Copper concentrator design verification: defined maintenance and 3rd-party logistics requirements to achieve production targets for \$2b+ greenfield project
+\item Copper concentrator design verification: defined maintenance and 3rd-party logistics requirements to achieve production targets for multiple \$2b+ greenfield projects
 \item Volume risk assessment of iron ore and coal capital projects: identified more robust infrastructure and product strategies worth additional \$400m+ NPV
 \item Capital expansion planning and operational improvements across iron ore, coal, copper and aluminium mining and processing, as well as public rail networks and brick making facilities
 \end{list2}
@@ -173,6 +173,9 @@ Singapore 199597}
 \item Travel
 \item Photography
 \end{list2}
+
+\section{\sc Professional Referees}
+Referees available on request
 
 
 \end{resume}
