Archived previous CV; updated with expanded professional experience

--- a/src/resume_Apr2021.tex
+++ b/src/resume_Apr2021.tex
@@ -69,7 +69,7 @@ Singapore 199597}
 %\section{\sc Objective}
 %To be actively involved in the research and development of speech- and speaker-based technologies, in particular their practical applications across a wide range of engineering operations. Longer-term plans are to advance into an academic position with responsibility for continuing the advanced research efforts of an institution in this field
 
-\section{\sc Skill highlights}
+\section{\sc Professional Philosophy}
 \begin{list2}
 \item Problem solving: find the right tool and approach to solve the problem
 \item Communication: simplify complexity, make it actionable
@@ -84,6 +84,15 @@ Singapore 199597}
 \item Machine learning (ML): arrival prediction of bulk carriers using gradient-boosted machines
 \end{list2}
 
+\section{\sc Data science software skills}
+\begin{list2}
+\item Languages: Python, Java, C/C++
+\item Simulation: AnyLogic, ARENA
+\item Optimization: Python (PuLP, pyomo), AIMMS, Gurobi
+\item Machine Learning: Python, sci-kit learn
+\item General: Git, SVN, AWS, Matlab, R, Tableau, PowerBI, SQL
+\end{list2}
+
 \section{\sc Professional Experience}
 {\textbf{Consultant and Senior Data Scientist}} \hfill {\it February 2019 -- Current}\\
 \vspace{-0.85\baselineskip}
@@ -91,15 +100,15 @@ Singapore 199597}
 \item {\it BCG Gamma, The Boston Consulting Group, Singapore/Sydney}
 %\item The responsibilities of this position include:
 \begin{list2}
-\item Gamma SEA lead for Industrial Goods, Operations and Augmented Analytics topics
+\item Gamma SEA lead for Industrial Goods, Operations and Augmented Analytics topics; responsible for simulation \& optimization project delivery, and marketing BCG proprietary data science tools
 \item Discrete-event simulation (DES) of credit operations in India to optimize daily, weekly \& monthly rosters and campaign plans
-\item DES of iron ore beneficiation plant: identified co-commitments to deliver volume targets for a \$70m investment 
-\item Machine learning prediction of bulk carrier arrival time at load port: 5-15\% precision increase over existing model
+\item Development of a scenario planning tool using BCG proprietary methodologies for Covid-19 testing to inform Asia-Pacific air transport recovery during early phases of global pandemic
+\item DES of beneficiation plant: identified co-commitments to deliver volume targets for a \$70m investment 
+\item ML prediction of bulk carrier arrival time at load port: 5-15\% precision increase over existing model
 \item Medium-term market price discovery for commodity market using mixed integer programming: potential \$90m profit increase
 \item Integrated sales and operations planning optimization for pulp and paper mills, palm oil refineries: identified up to 10\% margin improvement 
 \end{list2}
 \end{list1}
-
 
 {\textbf{Principal Consultant}} \hfill {\it 2012 -- 2019}\\
 \vspace{-0.85\baselineskip}
@@ -107,12 +116,14 @@ Singapore 199597}
 \item {\it The Simulation Group, Brisbane/Perth, Australia}
 %\item The responsibilities of this position include:
 \begin{list2}
-\item Simulation consulting projects regional team lead
+\item Simulation consulting projects regional team lead; responsible for project excellence, team management, recruiting \& training, supporting business development activities
 \item Copper concentrator design verification: defined maintenance and 3rd-party logistics requirements to achieve production targets for multiple \$2b+ greenfield projects
 \item Volume risk assessment of iron ore and coal capital projects: identified more robust infrastructure and product strategies worth additional \$400m+ NPV
 \item Capital expansion planning and operational improvements across iron ore, coal, copper and aluminium mining and processing, as well as public rail networks and brick making facilities
 \end{list2}
 \end{list1}
+
+\newpage
 
 {\textbf{Project Officer}} \hfill {\it 2010 -- 2012}\\
 \vspace{-0.85\baselineskip}
@@ -126,18 +137,6 @@ Singapore 199597}
 \item Published 3 peer-reviewed journal articles \& 5 international conference papers, including research focus on airport passenger simulation using agent-based modelling
 \end{list2}
 \end{list1}
-
-\section{\sc Data science software skills}
-\begin{list2}
-\item Languages: Python, Java, C/C++
-\item Simulation: AnyLogic, ARENA
-\item Optimization: Python (PuLP, pyomo), AIMMS, Gurobi
-\item Machine Learning: Python, sci-kit learn
-\item General: Git, SVN, AWS, Matlab, R, Tableau, PowerBI, SQL
-\end{list2}
-
-
-\newpage
 
 \section{\sc Education}
 {\bf Doctor of Philosophy (Elec Eng)} \hfill {\it 2006 -- 2010}\\\vspace{-0.85\baselineskip}
