Renamed the resume template to `resume_master`; added months to dates for professional experience

--- a/src/resume_master.tex
+++ b/src/resume_master.tex
@@ -90,7 +90,7 @@ Singapore 199597}
 \item Simulation: AnyLogic, ARENA
 \item Optimization: Python (PuLP, pyomo), AIMMS, Gurobi
 \item Machine Learning: Python, sci-kit learn
-\item General: Git, SVN, AWS, Matlab, R, Tableau, PowerBI, SQL
+\item General: Git, SVN, AWS, Matlab, R, Tableau, PowerBI, SQL, Docker
 \end{list2}
 
 \section{\sc Professional Experience}
@@ -100,7 +100,7 @@ Singapore 199597}
 \item {\it BCG Gamma, The Boston Consulting Group, Singapore/Sydney}
 %\item The responsibilities of this position include:
 \begin{list2}
-\item Gamma SEA lead for Industrial Goods, Operations and Augmented Analytics topics; responsible for simulation \& optimization project delivery, and marketing BCG proprietary data science tools
+\item Gamma SEA lead for Industrial Goods, Operations and Augmented Analytics topics; responsible for simulation \& optimization project delivery, marketing BCG proprietary data science methodologies
 \item Discrete-event simulation (DES) of credit operations in India to optimize daily, weekly \& monthly rosters and campaign plans
 \item Development of a scenario planning tool using BCG proprietary methodologies for Covid-19 testing to inform Asia-Pacific air transport recovery during early phases of global pandemic
 \item DES of beneficiation plant: identified co-commitments to deliver volume targets for a \$70m investment 
@@ -110,7 +110,7 @@ Singapore 199597}
 \end{list2}
 \end{list1}
 
-{\textbf{Principal Consultant}} \hfill {\it 2012 -- 2019}\\
+{\textbf{Principal Consultant}} \hfill {\it January 2012 -- January 2019}\\
 \vspace{-0.85\baselineskip}
 \begin{list1}
 \item {\it The Simulation Group, Brisbane/Perth, Australia}
@@ -125,7 +125,7 @@ Singapore 199597}
 
 \newpage
 
-{\textbf{Project Officer}} \hfill {\it 2010 -- 2012}\\
+{\textbf{Project Officer}} \hfill {\it January 2010 -- January 2012}\\
 \vspace{-0.85\baselineskip}
 \begin{list1}
 \item {\it Airports of the Future Project, Queensland University of Technology, Brisbane, Australia}
