Updated CV for submission to Polymathian

--- a/src/resume_master.tex
+++ b/src/resume_master.tex
@@ -56,12 +56,11 @@ Australian
 \section{\sc Contact Information}
 
 \parbox[t]{3.3in}{%
-371 Beach Road\\
-City Gate, \#15-03\\
-Singapore 199597}
+15 Sleeper Street\\
+Apt. \#407\\
+Boston, MA, USA 02210}
 \parbox[t]{2.3in}{%
-{\it Phone}: {+65 9771 9781}  \\
-%{\it Fax}: +61 7 3138 1827  \\
+{\it Phone}: {+1 (617) 372-4196}  \\
 {\it Email}: {kleinschmidt\_tf@yahoo.com.au}
 {\it LinkedIn}: {www.linkedin.com/in/tristan-kleinschmidt-97947515}
 }
@@ -71,15 +70,16 @@ Singapore 199597}
 
 \section{\sc Professional Philosophy}
 \begin{list2}
-\item Problem solving: find the right tool and approach to solve the problem
+\item Problem solving: use the right tool for the business problem
 \item Communication: simplify complexity, make it actionable
-\item Enablement: insights are only part of the consulting framework
-\item Team management: build a community
+\item Enablement: user empowerment elevates value from data science insights and tools
+\item Team management: active communities brings out the best in people, accelerates innovation
+\item Sustainability: decisions made now must have sustainable impact for our planet
 \end{list2}
 
 \section{\sc Data science skill summary}
 \begin{list2}
-\item Discrete-event simulation (DES): 11yrs experience delivering DES for capital and operational decisions, across mining \& minerals and financial institutions
+\item Discrete-event simulation (DES): 12yrs experience delivering DES for capital and operational decisions, across mining \& minerals, manufacturing, and financial institutions
 \item Mathematical optimization: manufacturing production scheduling \& commodity pricing using mixed integer programming
 \item Machine learning (ML): arrival prediction of bulk carriers using gradient-boosted machines
 \end{list2}
@@ -87,7 +87,7 @@ Singapore 199597}
 \section{\sc Data science software skills}
 \begin{list2}
 \item Languages: Python, Java, C/C++
-\item Simulation: AnyLogic, ARENA
+\item Simulation: AnyLogic, ARENA, Python (SimPy)
 \item Optimization: Python (PuLP, pyomo), AIMMS, Gurobi
 \item Machine Learning: Python, sci-kit learn
 \item General: Git, SVN, AWS, Matlab, R, Tableau, PowerBI, SQL, Docker
@@ -97,10 +97,11 @@ Singapore 199597}
 {\textbf{Consultant and Senior Data Scientist}} \hfill {\it February 2019 -- Current}\\
 \vspace{-0.85\baselineskip}
 \begin{list1}
-\item {\it BCG Gamma, The Boston Consulting Group, Singapore/Sydney}
-%\item The responsibilities of this position include:
+\item {\it BCG Gamma, The Boston Consulting Group, Boston/Singapore/Sydney}
+%\item Key highlights and responsibilities of this position include:
 \begin{list2}
-\item Gamma SEA lead for Industrial Goods, Operations and Augmented Analytics topics; responsible for simulation \& optimization project delivery, marketing BCG proprietary data science methodologies
+\item Gamma North America Simulation Co-Lead, responsible for building regional DES capability, project pipeline, and training and mentoring of junior simulation practitioners
+\item Responsible for simulation \& optimization project delivery, marketing BCG proprietary data science capabilities and methodologies
 \item Discrete-event simulation (DES) of credit operations in India to optimize daily, weekly \& monthly rosters and campaign plans
 \item Development of a scenario planning tool using BCG proprietary methodologies for Covid-19 testing to inform Asia-Pacific air transport recovery during early phases of global pandemic
 \item DES of beneficiation plant: identified co-commitments to deliver volume targets for a \$70m investment 
@@ -168,7 +169,7 @@ Singapore 199597}
 
 \section{\sc Hobbies \& Community}
 \begin{list2}
-\item parkrun volunteer, St Lucia (QLD) \& Bishan (Singapore) parkruns, 2018 -- 2020.
+\item parkrun volunteer, St Lucia (QLD), Bishan (Singapore), \& Danehy Park (Boston) parkruns, 2018 -- 2022.
 \item Running
 \item Travel
 \item Photography
